# autoQCT

./: .gitignore  README.md  setup.cfg  setup.py  test.sh
ConfigSelection/: OH_w2-pos-1.xyz  __init__.py  atom.py  cluster.py  main.py  molecule.py
IonSelection/: README.md  atom.py  cluster.py  main.py  molecule.py
autoqct/: __init__.py  chem_id.py  chemicals.py  cp2kfile.py  ebind.py  importer.py  io.py  molecule.py  pcm.py  psi4run.py  qct.py  qm_input.py  rrho.py  run.py  slurm.py  xdrfile.py
examples/: rdf.py
examples/chloride/: cp2k_cluster.xyz  make.py  qct.py
scripts/: batch.sh  rules.yaml
tests/: Fluoride.xtc  simple.py
