##########################
# Setup.py Configuration #
##########################

[metadata]
name = autoqct
version = 0.1.0
description = "A scripting framework to run QCT calculations.",
long_description = file: README.md

# URLs associated with the project
url = https://github.com/frobnitzem/autoQCT
download_url = https://github.com/frobnitzem/autoQCT/releases
project_urls =
    Bug Tracker = https://github.com/frobnitzem/autoQCT/issues
    Source Code = https://github.com/frobnitzem/autoQCT
#    Documentation = https://autoQCT.readthedocs.io

# Author information
author = David Rogers and Diego Gomez
author_email = predictivestatmech@gmail.com
maintainer = David Rogers and Diego Gomez
maintainer_email = predictivestatmech@gmail.com

# License Information
license = GPL3
license_file = LICENSE

# Search tags
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Quasichemical
    Solvation
    Molecule
    Ion
    Domain Specific Language
    DSL

[options]
install_requires =
    numpy

#    pyparsing
#    pybel

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.0

# Where is my code
packages = autoqct

[options.extras_require]
indra =
    indra
jupyter =
    jinja2
    ipython
neo4j =
    py2neo
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

